[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/SpinningArm.gd" type="Script" id=1]
[ext_resource path="res://Visual/decor_steel_pipe.png" type="Texture" id=2]
[ext_resource path="res://Visual/Editor/editor_circle.png" type="Texture" id=3]
[ext_resource path="res://Visual/Editor/editor_pointer.png" type="Texture" id=4]
[ext_resource path="res://Visual/Editor/editor_vector.png" type="Texture" id=5]

[node name="SpinningArm" type="Node2D"]
script = ExtResource( 1 )

[node name="editor_circle" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="decor_steel_pipe" type="Sprite" parent="."]
scale = Vector2( 0.75, 1.125 )
texture = ExtResource( 2 )
offset = Vector2( 0, -112 )

[node name="editor_vector" type="Sprite" parent="."]
modulate = Color( 0.0235294, 0.901961, 0.631373, 1 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )
offset = Vector2( 0, -32 )

[node name="editor_pointer" type="Sprite" parent="."]
texture = ExtResource( 4 )
offset = Vector2( 0, -288 )
